<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
<TextView
    android:id="@+id/routeA1"
    android:text="ROUTE A1"
    android:textStyle="bold"
    android:textSize="50dp"
    android:textColor="#03A9F4"/>
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_width="100dp"
        android:weightSum="2">
        <Button
            android:id="@+id/A1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/lbnagar"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/A2"
            android:layout_width="fill_parent"
            android:text="@string/dilsukhnagar"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_width="100dp"
        android:weightSum="2">
        <Button
            android:id="@+id/A3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/ameerpet"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/A4"
            android:layout_width="50dp"
            android:text="@string/srnagar"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_width="100dp"
        android:weightSum="2">
        <Button
            android:id="@+id/B1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/KPHB"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/B2"
            android:layout_width="50dp"
            android:text="@string/mehdipatnam"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_width="100dp"
        android:weightSum="2">
        <Button
            android:id="@+id/C1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/uppal"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/C2"
            android:layout_width="50dp"
            android:text="@string/Habsiguda"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_weight="1"/>
    </TableRow>
</TableLayout>
